# DLWMS_Mobile

./: .gitignore  Cargo.toml  flutter_launcher_icons.yaml  pubspec.yaml  readme.md
.github/workflows/: android.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/cikez/dlwms_mobile/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/lib/: theme_provider.dart
lib/src/pages/: home.dart  login.dart  news_details.dart  webview_page.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart
lib/src/widgets/: drawer.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_dlwms_mobile.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_dlwms_mobile.podspec
rust_builder/windows/: CMakeLists.txt
src/: main.rs
src/components/: home.rs  login.rs  mod.rs  navbar.rs  page_not_found.rs
src/services/: login.rs
web/: index.html  manifest.json
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
